# ing-extractor-llm

./: .env.example  README.md  pyproject.toml  streamlit.py
app/: ai.py  config.py  service.py  utils.py
scripts/: start.sh
